# akton25-find-my-meal

./: .gitignore  Makefile  README.md  example.json  example_schema.js  ppt.html  promptEng.md  pyproject.toml  setup.sh  start.sh
agent/: pyproject.toml
agent/src/: information_agent.py  main.py  recommender_agent.py  server.py
app/: .env.example  .flutter-plugins  .flutter-plugins-dependencies  README.md  pubspec.yaml
app/.dart_tool/: package_config.json  package_config_subset
app/.dart_tool/chrome-device/Default/: BrowsingTopicsState  Cookies  DIPS-shm  DIPS-wal  History  MediaDeviceSalts  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  Shortcuts  Top Sites  TransportSecurity  Web Data  passkey_enclave_state
app/.dart_tool/dartpad/: web_plugin_registrant.dart
app/.dart_tool/flutter_build/56ba9b7ded31630dad8b7710f696b3b8/: .filecache  dart_build.d  dart_build.stamp  debug_macos_bundle_flutter_assets.stamp  debug_macos_framework.stamp  debug_unpack_macos.stamp  flutter_assets.d  gen_dart_plugin_registrant.stamp  install_code_assets.d  install_code_assets.stamp  kernel_snapshot_program.d  (+2 more)
app/android/app/: build.gradle.kts
app/ios/Runner/: AppDelegate.swift  Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/config/: env.dart
app/lib/pages/: home_page.dart  restaurant_detail_page.dart  restaurant_details_page.dart  results_page.dart  search_page.dart
app/lib/screens/: chat_screen.dart  location_input_screen.dart  processing_screen.dart  restaurant_details_screen.dart  restaurant_swipe_screen.dart  voice_input_screen.dart  waiting_screen.dart  welcome_screen.dart
app/lib/services/: ai_chat_service.dart  server_service.dart  speech_service.dart  voice_service.dart
app/linux/: CMakeLists.txt
app/linux/runner/: my_application.cc
app/macos/: Podfile
app/macos/Runner/: DebugProfile.entitlements  Info.plist
app/macos/Runner.xcodeproj/: project.pbxproj
app/test/: widget_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc  main.cpp
backend/: README.md  main.py  pyproject.toml
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: InteractionFlow.tsx  RestaurantReport.tsx  ThemeRegistry.tsx
frontend/src/types/: restaurant.ts
google_maps_agent/: README.md  config.json  main.py  pyproject.toml  test_llm.py
google_maps_agent/src/google_maps_agent/: __init__.py  agent.py
(+42 files in other folders)
