[tool.poetry]
name = "google-maps-mcp-agent"
version = "0.1.0"
description = "Agent for interacting with Google Maps MCP and Kluster AI"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
openai = "^1.12.0"
transformers = "^4.36.0"
torch = "^2.1.0"
google_maps_agent = { path = "./google_maps_agent" }
fastapi = "^0.110.0"
uvicorn = "^0.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 